Added main_module to dist.ini
Added main_module to dist.ini to ensure dzil doesn't pick a different
module as its main module

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,9 @@ license = Perl_5
 copyright_holder = Paul Durden
 copyright_year   = 2015
 
+; Explicitly specify the main module to avoid any wrong choices
+main_module = lib/Tk/FormUI.pm
+
 [PruneFiles]
 filename = dist.ini
 ; Git rid of "*~"
