--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,10 @@ match = ~$
 ; Git rid of "*.bak"
 match = \.bak$
 
+[GithubMeta]
+; Enable issue tracking using Github
+issues = 1
+
 [NextRelease]
 format = %-7v %{yyyy-MM-dd}d
 
@@ -47,6 +51,8 @@ format = %-7v %{yyyy-MM-dd}d
 
 [ConfirmRelease]
 
+[UploadToCPAN]
+
 [ShareDir]
 dir = examples
 
@@ -75,3 +81,7 @@ disable = Test::EOL
 ; On Windows using Strawberry perl, the Test::UnusedVars will often cause the
 ;   perl interpreter to die. No problems in Linux.
 disable = Test::UnusedVars
+; On Windows 7 using Strawberry perl, the Test::Kwalitee will fail not 
+;   detecting the fils Dist::Zilla creats (META.yml, README, LICENSE, etc.)
+;   Added release-kwalitee.t that checks for Windows
+disable = Test::Kwalitee
