Allow dist.ini in tarball

--- a/dist.ini
+++ b/dist.ini
@@ -12,10 +12,8 @@ copyright_year   = 2015
 main_module = lib/Tk/FormUI.pm
 
 [PruneFiles]
-filename = dist.ini
-; Git rid of "*~"
+; Git rid of backup files
 match = ~$
-; Git rid of "*.bak"
 match = \.bak$
 
 [GithubMeta]
@@ -81,7 +79,9 @@ disable = Test::EOL
 ; On Windows using Strawberry perl, the Test::UnusedVars will often cause the
 ;   perl interpreter to die. No problems in Linux.
 disable = Test::UnusedVars
-; On Windows 7 using Strawberry perl, the Test::Kwalitee will fail not 
-;   detecting the fils Dist::Zilla creats (META.yml, README, LICENSE, etc.)
-;   Added release-kwalitee.t that checks for Windows
+; One of my Windows 7 boxes using Strawberry perl, the Test::Kwalitee fails  
+;   saying it cannot detect many of the files Dist::Zilla creates (META.yml, 
+;   README, LICENSE, etc.)
+;   Added t/release-kwalitee.t that allows skipping the test if SKIP_KWALITEE 
+;	  is defined
 disable = Test::Kwalitee
